make the site mine

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ include('remember.php');
     <!-- Footer-->
       <div class="footer">
           <div class="container">
-              <p>Serasoft.com Copyright &copy; 2018-<?php $today = date("Y"); echo $today?>.</p>
+              <p>Serasoft.com Copyright &copy; 2018<?php $today = date("Y"); echo $today?>.</p>
           </div>
       </div>
 
